# 1.12.2-1.3
* Horses enhanced by methamphetamines now transfer their ridiculous stats to offfspring.

# 1.12.2-1.2
* You can no longer apply books to artifacts.
* Fixed a bug where the server wouldn't start anymore. :p

# 1.12.2-1.1
* Items in mega chests now have their tooltips rendered correctly.
* Buffed mining xp for ores again.
* Tall grass will no longer ding from botany.
* Nerfed seduce villager, allows reducing total trade cost by half.
* Buffed blacksmithing xp for repairing items.
* Buffed blacksmithing xp for non-gold items.
* Glazed terracota now gives blacksmithing xp.
* Drill no longer triggers on activateable blocks (chests, furances, crafting table e.t.c). Sorry!
* Fixed an issue with an artifact (no-spoilers) causing the game to crash when hovered over.
* Farmers tan now provides speed instead of saturation.
* Fixed a bug where you weren't able to craft dispensers.
* Added a recipe for saddles!
* Casey now hits home runs instead of foul balls.
* Reduced chance of finding artifacts in chests. It's a 7.5% chance per roll with 2 maximum rolls for a roughly 14.43% chance of finding an artifact.
* Added recipe advancements for all skill abilities! When you level up, you should get a recipe added to your book for items crafted based on skill level.
* Added a new skill: Brewing.  I effectively had to rewrite brewing from scratch, so I made some alterations to the base games brewing, though I tried to keep parity as much as possible:
  1. Mundane & thick potions are no longer craftable. As far as I could tell they were useless, though I may use them in the future.
  2. Fermented spider eyes can corrupt more effects. Specifically strength -> weakenss, & posion -> wither.
  3. Potion modifiers (glowstone / redstone) can be applied multiple times. The amount of modifiers you can apply is based on your brewing level. Glowstone now increases potion duration by 30% and costs 1 modifier level. Redstone increases effect level by 1 and costs 2 modifier levels.