@@ -1,3 +1,3 @@
 #!/bin/bash
 
-cp ~/git/skrim/build/libs/skrim-1.12.2-1.1.jar ~/.minecraft/mods/skrim.jar
+cp ~/git/skrim/build/libs/skrim-1.12.2-1.2.jar ~/.minecraft/mods/skrim.jar
