@@ -2,18 +2,19 @@ package avi.mod.skrim.items.items;
 
 import avi.mod.skrim.items.ItemBase;
 import avi.mod.skrim.skills.brewing.SkrimPotionUtils;
+import avi.mod.skrim.utils.ObfuscatedMethod;
 import avi.mod.skrim.utils.Utils;
 import net.minecraft.client.renderer.color.IItemColor;
 import net.minecraft.client.util.ITooltipFlag;
-import net.minecraft.creativetab.CreativeTabs;
 import net.minecraft.entity.EntityLivingBase;
+import net.minecraft.entity.projectile.EntityArrow;
+import net.minecraft.entity.projectile.EntityTippedArrow;
 import net.minecraft.init.PotionTypes;
-import net.minecraft.item.ItemPotion;
 import net.minecraft.item.ItemStack;
+import net.minecraft.item.ItemTippedArrow;
 import net.minecraft.potion.PotionEffect;
 import net.minecraft.potion.PotionType;
 import net.minecraft.potion.PotionUtils;
-import net.minecraft.util.NonNullList;
 import net.minecraft.world.World;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
@@ -23,42 +24,37 @@ import javax.annotation.Nullable;
 import java.util.List;
 
 /**
- * A clone of the ItemPotion class with better handling for arbitrary effects.
+ * An overridden verison of ItemTippedArrow to work with SkrimPotions or normal potions correctly.
  */
-public class SkrimPotion extends ItemPotion implements ItemBase {
+public class SkrimTippedArrow extends ItemTippedArrow implements ItemBase {
 
-  private String name = "skrim_potion";
+  private static final String NAME = "skrim_tipped_arrow";
 
-  public SkrimPotion() {
-    this.setRegistryName(name);
-    this.setUnlocalizedName(name);
+  public SkrimTippedArrow() {
+    this.setUnlocalizedName(NAME);
+    this.setRegistryName(NAME);
   }
 
-  public SkrimPotion(String name) {
-    this.name = name;
-    this.setRegistryName(name);
-    this.setUnlocalizedName(name);
-  }
-
+  @Override
   @Nonnull
-  public ItemStack onItemUseFinish(@Nonnull ItemStack stack, World worldIn, @Nonnull EntityLivingBase entityLiving) {
-    return super.onItemUseFinish(stack, worldIn, entityLiving);
+  public EntityArrow createArrow(@Nonnull World worldIn, @Nonnull ItemStack stack, EntityLivingBase shooter) {
+    EntityTippedArrow entitytippedarrow = new EntityTippedArrow(worldIn, shooter);
+    entitytippedarrow.setPotionEffect(stack);
+    ObfuscatedMethod.SET_FIXED_COLOR.invoke(entitytippedarrow, SkrimPotionUtils.getColor(stack));
+    return entitytippedarrow;
   }
 
+  @Override
   @Nonnull
-  public String getItemStackDisplayName(@Nonnull ItemStack stack) {
-    return getBaseDisplayName(stack);
-  }
-
-  public String getBaseDisplayName(@Nonnull ItemStack stack) {
+  public String getItemStackDisplayName(ItemStack stack) {
     StringBuilder sb = new StringBuilder();
     PotionType type = PotionUtils.getPotionTypeFromNBT(stack.getTagCompound());
-    if (type == PotionTypes.WATER) return "Water Bottle";
-    if (type == PotionTypes.AWKWARD) return "Awkward Potion";
-    if (type == PotionTypes.MUNDANE) return "Mundane Potion";
-    if (type == PotionTypes.THICK) return "Thick Potion";
+    if (type == PotionTypes.WATER) return "Tipped Arrow";
+    if (type == PotionTypes.AWKWARD) return "Tipped Arrow";
+    if (type == PotionTypes.MUNDANE) return "Tipped Arrow";
+    if (type == PotionTypes.THICK) return "Tipped Arrow";
 
-    sb.append("Potion of");
+    sb.append("Arrow of");
     boolean first = true;
     for (PotionEffect effect : PotionUtils.getEffectsFromStack(stack)) {
       if (!first) {
@@ -74,28 +70,15 @@ public class SkrimPotion extends ItemPotion implements ItemBase {
   }
 
   @SideOnly(Side.CLIENT)
-  public void addInformation(ItemStack stack, @Nullable World worldIn, List<String> tooltip, ITooltipFlag flagIn) {
+  public void addInformation(ItemStack stack, @Nullable World worldIn, @Nonnull List<String> tooltip, ITooltipFlag flagIn) {
     PotionUtils.addPotionTooltip(stack, tooltip, 1.0F);
     tooltip.add("");
     tooltip.add("Modification Level: " + SkrimPotionUtils.timesModified(stack));
   }
 
-  @SideOnly(Side.CLIENT)
-  public boolean hasEffect(ItemStack stack) {
-    return super.hasEffect(stack) || !PotionUtils.getEffectsFromStack(stack).isEmpty();
-  }
-
   @Override
   public String getTexturePath() {
     return "items";
-  }
-
-  /**
-   * We don't want to generate a whole bunch of sub skrim potion items that are carbon copies of the base item potion items.
-   */
-  @Override
-  public void getSubItems(@Nonnull CreativeTabs tab, @Nonnull NonNullList<ItemStack> items) {
-
   }
 
   @SideOnly(Side.CLIENT)
