@@ -1,5 +1,6 @@
 # 1.12.2-1.3
 * Horses enhanced by methamphetamines now transfer their ridiculous stats to offfspring.
+* Custom potions can now be used to create tipped arrows.
 
 # 1.12.2-1.2
 * You can no longer apply books to artifacts.
